ObservableStats.kt && SimpleObservableStats.kt are ready to replace old Stats.kt