@@ -28,7 +28,6 @@ dependencies {
 
 application {
     mainClassName = "worder.AppEntry"
-    applicationDefaultJvmArgs = listOf("--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED")
 }
 
 javafx {
